# pomoplug

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  opencode.json  pyproject.toml
.zed/: debug.json
pomoplug/: db.sqlite3  tailwind.config.js
pomoplug/authentication/: urls.py  views.py
pomoplug/authentication/templates/: authentication.html
pomoplug/blog/: models.py
pomoplug/blog/static/css/: output-blog.css
pomoplug/blog/templates/: post.html
pomoplug/config/: settings.py  urls.py
pomoplug/timer/: models.py  views.py
pomoplug/timer/locale/pt_BR/LC_MESSAGES/: django.po
pomoplug/timer/migrations/: 0001_initial.py  0003_timer_created_at_timer_updated_at.py  0004_timer_total_time.py
pomoplug/timer/static/css/: input.css  output.css
pomoplug/timer/templates/: 404.html  dialog.html  index.html  main.html  sidebar.html  timer.html
timurr/authentication/: urls.py  views.py
timurr/authentication/static/css/: output-authentication.css
timurr/blog/: admin.py  views.py
timurr/blog/migrations/: 0001_initial.py
timurr/blog/static/css/: base.css
timurr/config/: asgi.py  wsgi.py
timurr/timer/: models.py  views.py
timurr/timer/migrations/: 0002_timer_user.py
timurr/timer/templates/: 404.html  index.html  main.html  sidebar.html
timurr/timer/templatetags/: timer_extras.py
tomacheck/: db.sqlite3
tomacheck/config/: settings.py  urls.py
tomacheck/timer/: admin.py  models.py  views.py
tomacheck/timer/migrations/: 0001_initial.py
tomacheck/timer/templates/: timer.html
(+1 files in other folders)
