[project]
name = "pomoplug"
version = "0.1.0"
description = "Pomoplug - Pluggable timers for your project management needs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-environ>=0.12.0",
    "google-api-python-client>=2.187.0",
    "gunicorn>=23.0.0",
    "markdown>=3.10.1",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.11.0",
]
